--- a/estilo.css
+++ b/estilo.css
@@ -1,9 +1,9 @@
 body{
-    background-color: aqua;
+    background-color: plum;
     margin: 10%;
 }
 
 h1{
-    color: brown;
+    color: black;
     text-align: center;
 }
